made several corrections, improvements and modifications in the process of school registration