@@ -6,31 +6,39 @@ package net.sourceforge.fenixedu.presentationTier.Action.student.schoolRegistrat
 
 import java.util.ArrayList;
 import java.util.Calendar;
+import java.util.Collections;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
 
 import net.sourceforge.fenixedu.applicationTier.IUserView;
+import net.sourceforge.fenixedu.applicationTier.Filtro.exception.FenixFilterException;
+import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.FenixServiceException;
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.InvalidPasswordServiceException;
 import net.sourceforge.fenixedu.applicationTier.security.PasswordEncryptor;
 import net.sourceforge.fenixedu.dataTransferObject.InfoClass;
 import net.sourceforge.fenixedu.dataTransferObject.InfoCountry;
 import net.sourceforge.fenixedu.dataTransferObject.InfoPerson;
+import net.sourceforge.fenixedu.dataTransferObject.InfoStudent;
 import net.sourceforge.fenixedu.dataTransferObject.student.schoolRegistration.InfoResidenceCandidacy;
+import net.sourceforge.fenixedu.domain.degree.DegreeType;
 import net.sourceforge.fenixedu.domain.person.MaritalStatus;
 import net.sourceforge.fenixedu.framework.factory.ServiceManagerServiceFactory;
 import net.sourceforge.fenixedu.presentationTier.Action.commons.TransactionalDispatchAction;
+import net.sourceforge.fenixedu.presentationTier.Action.exceptions.FenixTransactionException;
 import net.sourceforge.fenixedu.presentationTier.Action.exceptions.InvalidPasswordActionException;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.ServiceUtils;
-import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionConstants;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionUtils;
 import net.sourceforge.fenixedu.util.Data;
 
+import org.apache.commons.beanutils.BeanComparator;
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.collections.Predicate;
+import org.apache.struts.action.ActionError;
+import org.apache.struts.action.ActionErrors;
 import org.apache.struts.action.ActionForm;
 import org.apache.struts.action.ActionForward;
 import org.apache.struts.action.ActionMapping;
@@ -40,43 +48,27 @@ import org.apache.struts.util.LabelValueBean;
 /**
  * @author Nuno Correia
  * @author Ricardo Rodrigues
- *  
+ * 
  */
 
 public class SchoolRegistrationAction extends TransactionalDispatchAction {
 
     public ActionForward start(ActionMapping mapping, ActionForm form, HttpServletRequest request,
             HttpServletResponse response) throws Exception {
-        super.createToken(request);
 
-        HttpSession session = request.getSession(false);
-
-        IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
-
-        InfoPerson infoPerson = null;
-
-        Object args[] = { userView.getUtilizador() };
-
-        infoPerson = (InfoPerson) ServiceManagerServiceFactory.executeService(userView,
-                "ReadPersonByUsername", args);
-
-        session.removeAttribute("personalInfo");
-
-        session.setAttribute("personalInfo", infoPerson);
         return mapping.findForward("changePassword");
     }
 
     public ActionForward visualizeFirstTimeStudentPersonalInfoAction(ActionMapping mapping,
             ActionForm form, HttpServletRequest request, HttpServletResponse response) throws Exception {
 
-        HttpSession session = request.getSession(false);
-        IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
+        IUserView userView = SessionUtils.getUserView(request);
+        InfoPerson infoPerson = (InfoPerson) ServiceManagerServiceFactory.executeService(userView,
+                "ReadPersonByUsername", new Object[] { userView.getUtilizador() });
 
         DynaActionForm registrationForm = (DynaActionForm) form;
         String oldPassword = (String) registrationForm.get("oldPassword");
         String newPassword = (String) registrationForm.get("newPassword");
-
-        InfoPerson infoPerson = (InfoPerson) session.getAttribute("personalInfo");
 
         try {
             validatePassword(infoPerson, oldPassword, newPassword);
@@ -84,16 +76,15 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
             throw new InvalidPasswordActionException(e);
         }
 
-        //session.setAttribute(SessionConstants.MARITAL_STATUS_LIST_KEY, Arrays.asList(MaritalStatus.values()));
         registrationForm.set("maritalStatus", MaritalStatus.SINGLE.toString());
+        registrationForm.set("name", infoPerson.getNome());
 
-        //		Get List of available Countries
-        Object result = null;
-        result = ServiceManagerServiceFactory.executeService(userView, "ReadAllCountries", null);
-        ArrayList country = (ArrayList) result;
+        // Get List of available Countries
+        List countries = (List) ServiceManagerServiceFactory.executeService(userView,
+                "ReadAllCountries", null);
 
-        //			Build List of Countries for the Form
-        Iterator iterador = country.iterator();
+        // Build List of Countries for the Form
+        Iterator iterador = countries.iterator();
 
         List nationalityList = new ArrayList();
         while (iterador.hasNext()) {
@@ -102,20 +93,101 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
                     .getNationality()));
         }
 
-        session.setAttribute(SessionConstants.NATIONALITY_LIST_KEY, nationalityList);
+        request.setAttribute("nationalityList", nationalityList);
         registrationForm.set("nacionality", "PORTUGUESA NATURAL DO CONTINENTE");
 
-        if (request.getParameter("error") != null)
+        if (request.getParameter("error") != null) {
             request.setAttribute("incompleteData",
                     "Existem campos obrigatórios que não foram correctamente preenchidos");
+        }
+
+        request.setAttribute("infoPerson", infoPerson);
 
         return mapping.findForward("Success");
     }
 
-    public ActionForward viewInquiryQuestions(ActionMapping mapping, ActionForm form,
-            HttpServletRequest request, HttpServletResponse response) {
+    public ActionForward preparePersonalDataUseInquiry(ActionMapping mapping, ActionForm form,
+            HttpServletRequest request, HttpServletResponse response) throws FenixFilterException,
+            FenixServiceException, FenixTransactionException {
 
-        return mapping.findForward("viewQuestions");
+        return mapping.findForward("viewPersonalDataUseInquiry");
+    }
+
+    public ActionForward prepareDislocatedStudentInquiry(ActionMapping mapping, ActionForm form,
+            HttpServletRequest request, HttpServletResponse response) throws FenixFilterException,
+            FenixServiceException, FenixTransactionException {
+
+        IUserView userView = SessionUtils.getUserView(request);
+
+        DynaActionForm schoolRegistrationForm = (DynaActionForm) form;
+
+        String answer = (String) schoolRegistrationForm.get("authorizationAnswer");
+        if (answer == null || answer.equals("")) {
+            ActionErrors actionErrors = new ActionErrors();
+            actionErrors.add("error", new ActionError("error.enrollment.inquiry.mandatory"));
+            saveErrors(request, actionErrors);
+            return mapping.getInputForward();
+        }
+
+        final List infoCountries = (List) ServiceManagerServiceFactory.executeService(userView,
+                "ReadAllCountries", null);
+
+        List uniqueInfoCountries = new ArrayList();
+        Integer defaultCountryID = null;
+        for (Iterator iter = infoCountries.iterator(); iter.hasNext();) {
+            InfoCountry infoCountry = (InfoCountry) iter.next();
+            if (!containsCountry(uniqueInfoCountries, infoCountry)) {
+                uniqueInfoCountries.add(infoCountry);
+                if (infoCountry.getName().equalsIgnoreCase("PORTUGAL")) {
+                    defaultCountryID = infoCountry.getIdInternal();
+                }
+            }
+        }
+        Collections.sort(uniqueInfoCountries, new BeanComparator("name"));
+        schoolRegistrationForm.set("countryID", defaultCountryID);
+        request.setAttribute("infoCountries", uniqueInfoCountries);
+
+        List infoDistricts = (List) ServiceManagerServiceFactory.executeService(userView,
+                "ReadAllDistricts", null);
+        request.setAttribute("infoDistricts", infoDistricts);
+
+        if (schoolRegistrationForm.get("dislocatedCountryID") != null) {
+            Integer dislocatedCountryID = (Integer) schoolRegistrationForm.get("dislocatedCountryID");
+            if (dislocatedCountryID.equals(defaultCountryID)) {
+                request.setAttribute("portugal", "portugal");
+            }
+        }
+
+        if (schoolRegistrationForm.get("dislocatedAnswer") != null) {
+            String dislocatedAnswer = (String) schoolRegistrationForm.get("dislocatedAnswer");
+            if (dislocatedAnswer.equalsIgnoreCase("true")) {
+                request.setAttribute("dislocated", "dislocated");
+            }
+        }
+
+        return mapping.findForward("showDislocatedStudentInquiry");
+    }
+
+    public ActionForward prepareResidenceCandidacy(ActionMapping mapping, ActionForm form,
+            HttpServletRequest request, HttpServletResponse response) throws FenixFilterException,
+            FenixServiceException, FenixTransactionException {
+
+        DynaActionForm schoolRegistrationForm = (DynaActionForm) form;
+        String answer = (String) schoolRegistrationForm.get("dislocatedAnswer");
+        if (answer == null || answer.equals("")) {
+            ActionErrors actionErrors = new ActionErrors();
+            actionErrors.add("error", new ActionError("error.enrollment.inquiry.mandatory"));
+            saveErrors(request, actionErrors);
+            return mapping.findForward("errorValidating");
+        }
+
+        return mapping.findForward("prepareResidenceCandidacy");
+    }
+
+    public ActionForward residenceCandidacy(ActionMapping mapping, ActionForm form,
+            HttpServletRequest request, HttpServletResponse response) throws Exception {
+
+        return mapping.findForward("residenceCandidacy");
     }
 
     public ActionForward enrollStudent(ActionMapping mapping, ActionForm form,
@@ -124,9 +196,8 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
         IUserView userView = SessionUtils.getUserView(request);
 
         DynaActionForm totalForm = (DynaActionForm) form;
-        HashMap answersMap = (HashMap) totalForm.get("answersMap");
 
-        Integer idInternal = new Integer((String) totalForm.get("idInternal"));
+        Integer idInternal = Integer.valueOf((String) totalForm.get("idInternal"));
         String dayOfEmissionDateOfDocumentId = (String) totalForm.get("dayOfEmissionDateOfDocumentId");
         String monthOfEmissionDateOfDocumentId = (String) totalForm
                 .get("monthOfEmissionDateOfDocumentId");
@@ -138,6 +209,7 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
                 .get("monthOfExpirationDateOfDocumentId");
         String yearOfExpirationDateOfDocumentId = (String) totalForm
                 .get("yearOfExpirationDateOfDocumentId");
+        String name = (String) totalForm.get("name");
         String nameOfFather = (String) totalForm.get("nameOfFather");
         String nameOfMother = (String) totalForm.get("nameOfMother");
         String nacionality = (String) totalForm.get("nacionality");
@@ -148,21 +220,22 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
         String area = (String) totalForm.get("area");
         String primaryAreaCode = (String) totalForm.get("primaryAreaCode");
         String secondaryAreaCode = (String) totalForm.get("secondaryAreaCode");
-        if (secondaryAreaCode == null || secondaryAreaCode.equals(""))
+        if (secondaryAreaCode == null || secondaryAreaCode.equals("")) {
             secondaryAreaCode = new String("000");
+        }
         String areaOfAreaCode = (String) totalForm.get("areaOfAreaCode");
         String parishOfResidence = (String) totalForm.get("parishOfResidence");
         String districtSubdivisionOfResidence = (String) totalForm.get("districtSubdivisionOfResidence");
         String districtOfResidence = (String) totalForm.get("districtOfResidence");
 
         Integer phone = null;
-        if (!((String) totalForm.get("phone")).equals(""))
+        if (!((String) totalForm.get("phone")).equals("")) {
             phone = new Integer((String) totalForm.get("phone"));
-
+        }
         Integer mobile = null;
-        if (!((String) totalForm.get("mobile")).equals(""))
+        if (!((String) totalForm.get("mobile")).equals("")) {
             mobile = new Integer((String) totalForm.get("mobile"));
-
+        }
         String email = (String) totalForm.get("email");
         Boolean availableEmail = (Boolean) totalForm.get("availableEmail");
         String webAddress = (String) totalForm.get("webAddress");
@@ -173,7 +246,6 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
         String maritalStatus = (String) totalForm.get("maritalStatus");
 
         Boolean residenceCandidate = getCheckBoxValue((String) totalForm.get("residenceCandidate"));
-        Boolean dislocated = new Boolean((String) totalForm.get("dislocated"));
         String observations = (String) totalForm.get("observations");
         Boolean availablePhoto = getCheckBoxValue((String) totalForm.get("availablePhoto"));
 
@@ -183,8 +255,10 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
                 + monthOfExpirationDateOfDocumentId + "-" + yearOfExpirationDateOfDocumentId, "-");
         InfoPerson infoPerson = new InfoPerson();
 
+        infoPerson.setIdInternal(idInternal);
         infoPerson.setDataEmissaoDocumentoIdentificacao(EmissionDateOfDocumentId);
         infoPerson.setDataValidadeDocumentoIdentificacao(ExpirationDateOfDocumentId);
+        infoPerson.setNome(name);
         infoPerson.setNomePai(nameOfFather);
         infoPerson.setNomeMae(nameOfMother);
         infoPerson.setNacionalidade(nacionality);
@@ -198,10 +272,12 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
         infoPerson.setFreguesiaMorada(parishOfResidence);
         infoPerson.setConcelhoMorada(districtSubdivisionOfResidence);
         infoPerson.setDistritoMorada(districtOfResidence);
-        if (phone != null)
+        if (phone != null) {
             infoPerson.setTelefone(phone.toString());
-        if (mobile != null)
+        }
+        if (mobile != null) {
             infoPerson.setTelemovel(mobile.toString());
+        }
         infoPerson.setEmail(email);
         infoPerson.setAvailableEmail(availableEmail);
         infoPerson.setEnderecoWeb(webAddress);
@@ -210,26 +286,48 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
         infoPerson.setProfissao(occupation);
         infoPerson.setPassword(newPassword);
         infoPerson.setMaritalStatus(MaritalStatus.valueOf(maritalStatus));
-        infoPerson.setIdInternal(idInternal);
         infoPerson.setAvailablePhoto(availablePhoto);
 
-        InfoResidenceCandidacy infoResidenceCandidacy = null;
-        if (residenceCandidate.booleanValue()) {
-            infoResidenceCandidacy = new InfoResidenceCandidacy();
+        InfoResidenceCandidacy infoResidenceCandidacy = new InfoResidenceCandidacy();
 
-            if (observations != null && !observations.equals(""))
-                observations = observations.replaceAll("\r\n", " ");
-
-            infoResidenceCandidacy.setDislocated(dislocated);
-            infoResidenceCandidacy.setObservations(observations);
+        if (observations != null && !observations.equals("")) {
+            observations = observations.replaceAll("\r\n", " ");
         }
 
-        Object args[] = { userView, answersMap, infoPerson, infoResidenceCandidacy };
+        infoResidenceCandidacy.setCandidate(residenceCandidate);
+        infoResidenceCandidacy.setObservations(observations);
+
+        Object args[] = { userView, infoPerson, infoResidenceCandidacy };
         Boolean result = (Boolean) ServiceUtils.executeService(userView, "SchoolRegistration", args);
 
         if (result.booleanValue() == false) {
             request.setAttribute("studentRegistered", "Os seus dados não foram alterados "
                     + "devido à sua matricula já ter sido efectuada anteriormente.");
+        } else {
+
+            // if it's to register the student, write the dislocated and
+            // personal data use inquiries information
+            Integer studentID = Integer.valueOf(userView.getUtilizador().substring(1));
+            Object[] args1 = { studentID, DegreeType.DEGREE };
+            InfoStudent infoStudent = (InfoStudent) ServiceManagerServiceFactory.executeService(
+                    userView, "ReadStudentByNumberAndDegreeType", args1);
+
+            Integer countryID = (Integer) totalForm.get("countryID");
+            String dislocatedStudent = (String) totalForm.get("dislocatedAnswer");
+            Integer districtID = null;
+            Integer dislocatedCountryID = null;
+            if (dislocatedStudent != null && dislocatedStudent.equalsIgnoreCase("true")) {
+                dislocatedCountryID = (Integer) totalForm.get("dislocatedCountryID");
+                districtID = (Integer) totalForm.get("districtID");
+            }
+
+            Object[] args2 = { infoStudent.getIdInternal(), countryID, dislocatedCountryID, districtID };
+            ServiceManagerServiceFactory.executeService(userView, "WriteDislocatedStudentAnswer", args2);
+
+            String answer = (String) totalForm.get("authorizationAnswer");
+            Object[] args3 = { infoStudent.getIdInternal(), answer };
+            ServiceManagerServiceFactory.executeService(userView,
+                    "WriteStudentPersonalDataAuthorizationAnswer", args3);
         }
 
         return mapping.findForward("viewEnrollments");
@@ -254,12 +352,6 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
         return mapping.findForward("Success");
     }
 
-    public ActionForward residenceCandidacy(ActionMapping mapping, ActionForm form,
-            HttpServletRequest request, HttpServletResponse response) throws Exception {
-
-        return mapping.findForward("residenceCandidacy");
-    }
-
     public ActionForward declarations(ActionMapping mapping, ActionForm form,
             HttpServletRequest request, HttpServletResponse response) throws Exception {
 
@@ -277,53 +369,29 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
     }
 
     public ActionForward printDeclaration(ActionMapping mapping, ActionForm form,
-            HttpServletRequest request, HttpServletResponse response) {
+            HttpServletRequest request, HttpServletResponse response) throws FenixFilterException,
+            FenixServiceException {
 
-        final int columnNumber = 73;
-        HttpSession session = request.getSession(false);
-        InfoPerson infoPerson = (InfoPerson) session.getAttribute("personalInfo");
-        DynaActionForm formBean = (DynaActionForm) form;
+        IUserView userView = SessionUtils.getUserView(request);
+        InfoPerson infoPerson = (InfoPerson) ServiceManagerServiceFactory.executeService(userView,
+                "ReadPersonByUsername", new Object[] { userView.getUtilizador() });
+
         Calendar calendar = Calendar.getInstance();
 
         String studentNumber = infoPerson.getUsername().substring(1);
-        String idNumber = infoPerson.getNumeroDocumentoIdentificacao();
-        String parishOfBirth = (String) formBean.get("parishOfBirth");
-        String districtOfBirth = (String) formBean.get("districtOfBirth");
-
-        String nameOfFather = (String) formBean.get("nameOfFather");
-        String nameOfMother = (String) formBean.get("nameOfMother");
-        String degreeName = request.getParameter("degreeName");
-
-        String partOne = "DECLARA, a pedido do interessado, que o aluno Número " + studentNumber + ", ";
-        String partTwo = infoPerson.getNome().toUpperCase() + ", ";
-        String partThree = "portador do Bilhete de Identidade " + idNumber + ", ";
-        String partFour = "natural de " + parishOfBirth.toUpperCase() + ", "
-                + districtOfBirth.toUpperCase() + " ";
-        String partFive = "filho de " + nameOfFather.toUpperCase() + " ";
-        String partSix = "e de " + nameOfMother.toUpperCase() + ", ";
-        String partSeven = "no ano lectivo " + calendar.get(Calendar.YEAR) + "/"
-                + (calendar.get(Calendar.YEAR) + 1) + " ESTÁ INSCRITO no curso de "
-                + degreeName.toUpperCase() + " deste instituto.";
-
+        String lectiveYear = calendar.get(Calendar.YEAR) + "/" + (calendar.get(Calendar.YEAR) + 1);
         List allMonths = Data.getMonths();
         LabelValueBean label = (LabelValueBean) allMonths.get(calendar.get(Calendar.MONTH) + 1);
         String month = label.getLabel();
+        String degreeName = request.getParameter("degreeName");
 
-        String partEight = "Secretaria dos Serviços Académicos do Instituto Superior Técnico,<br>em Lisboa, "
-                + calendar.get(Calendar.DAY_OF_MONTH)
-                + " de "
-                + month
-                + " de "
-                + calendar.get(Calendar.YEAR);
-
-        request.setAttribute("partOne1", partOne);
-        request.setAttribute("partTwo1", partTwo);
-        request.setAttribute("partThree1", partThree);
-        request.setAttribute("partFour1", partFour);
-        request.setAttribute("partFive1", partFive);
-        request.setAttribute("partSix1", partSix);
-        request.setAttribute("partSeven1", partSeven);
-        request.setAttribute("partEight1", partEight);
+        request.setAttribute("day", calendar.get(Calendar.DAY_OF_MONTH));
+        request.setAttribute("month", month);
+        request.setAttribute("year", calendar.get(Calendar.YEAR));
+        request.setAttribute("degreeName", degreeName.toUpperCase());
+        request.setAttribute("lectiveYear", lectiveYear);
+        request.setAttribute("infoPerson", infoPerson);
+        request.setAttribute("studentNumber", studentNumber);
 
         return mapping.findForward("sucess");
     }
@@ -352,4 +420,13 @@ public class SchoolRegistrationAction extends TransactionalDispatchAction {
         }
     }
 
+    private boolean containsCountry(List infoCountries, final InfoCountry country) {
+        return CollectionUtils.exists(infoCountries, new Predicate() {
+
+            public boolean evaluate(Object arg0) {
+                InfoCountry infoCountry = (InfoCountry) arg0;
+                return infoCountry.getName().equalsIgnoreCase(country.getName());
+            }
+        });
+    }
 }
